refactoring, auth, new trackcontroller